<resources>
    <string name="facebook_app_id">448129418899446</string>
    <string name="app_ID">22758271745</string>
    <string name="LEADERBOARD_ID">CggIgdb-41QQAhAG</string>
    <string name="share_success">"Share Your\nSuccess..."</string>
    <string name="share_get">"Get 500 Chip\nDaily For inviting..."</string>
    <string name="signin_failure">"Unable to sign in."</string>
    <string name="signin_other_error">"There was an issue with sign-in, please try again later."</string>
    <string name="at_how61">That\'s It!</string>
    <string name="at_how62">A Player who first reach cumulative score is the</string>
    <string name="at_how63">WINNER!</string>
    <string name="download_getRewards">DOWNLOAD &amp;\n GET REWARDS</string>
    <string name="You_Lose_Chips">You Lost Chips</string>
    <string name="special_deals">Special Deals!</string>
    <string name="special_offer">Special Offer!</string>
    <string name="Out_of_Chips">Out of Chips</string>
    <string name="Out_of_Chips_text">You don\'t have enough chips!\nBuy Now or collect free chips rewadrs... </string>
    <string name="Out_of_Chips_text1">Get More Chips from here..!</string>
    <string name="Benifit_fb">We never post feeds without your permission.</string>
    <string name="Try_some_more_Games">More Games you may like...!</string>
    <string name="Your_Chips_could_not_be_added_Please_try_again">Transaction Cancelled</string>
    <string name="LoginWith">Login With Facebook</string>
    <string name="Benifit_getchips">GET 5000\n CHIPS</string>
    <string name="Benifit_playfriends">PLAY WITH\n FRIENDS</string>
    <string name="Benifit_sync">SYNC YOUR\n PROGRESS</string>
    <string name="Benifit_device">PLAY ON ANY\n DEVICE</string>
    <string name="Fb_invite_title">Invite Facebook Friends</string>
    <string name="Invite_Earn">INVITE &amp; EARN</string>
    <string name="Invite_frnd_note">Chips are added when your requests \n will be accepted by your friends.</string>
    <string name="Skip_frnd">Skip >></string>
    <string name="We_hope_you_like_GinRummy_and_could_help_others_by_giving_it_good_rating">We hope you like GinRummy and could help others by giving it good rating !</string>
    <string name="Weekly_Winners">Weekly Winners</string>
    <string name="Select_your_desired_Boot_amount_Table">Select your desired Boot amount Table</string>
    <string name="You_dont_have_enough_Chips_to_Create_Custom_Table">You dont have enough Chips to Create Custom Table</string>
    <string name="pop_buddies_open_1st">Now, you can add \n Buddy by just entering \n their Unique ID!</string>
    <string name="UnreadMessages">Unread Messages</string>
    <string name="Create_Now">Create Now</string>
    <string name="Choose">Choose</string>
    <string name="Search">Search</string>
    <string name="You">You</string>
    <string name="Chat">Chat</string>
    <string name="EnterTextHere">Enter text here..</string>
    <string name="PleaseSelectAnyFriend">Please select any Friend</string>
    <string name="LevelUp">Level Up</string>
    <string name="unlock_price">"Unlock for "</string>
    <string name="PublishedSuccessfully">Published Successfully.</string>
    <string name="Restore">Restore</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="YouUnlockedThe">You unlocked the </string>
    <string name="Help">How To Play</string>
    <string name="SharewithyourFriends">Share with your Friends</string>
    <string name="levelup_desc">You reached to Higher level</string>
    <string name="levelup_desc1">Collect level-up bonus</string>
    <string name="CollectAndShare">Collect &amp; Share</string>
    <string name="offerstext">FIRST TIME\nPURCHASE OFFER</string>
    <string name="GinRummy">GinRummy</string>
    <string name="You_have_Invited">You have invited</string>
    <string name="Please_select_a_friend_to_invite_for_playing_Multiplayer_Tonk">Please select Friends to be Invited</string>
    <string name="friends_Successfully">friend Successfully!</string>
    <string name="ForYou">FOR YOU</string>
    <string name="Specialoff">SPECIAL OFFER</string>
    <string name="Free">" Free "</string>
    <string name="YouGet">"Total"</string>
    <string name="Cancel">Cancel</string>
    <string name="ForLimitedtimeonly">"*For Limited time only"</string>
    <string name="winnerWinscreen">Winner</string>
    <string name="ExitGame">Exit Game</string>
    <string name="Continue">Continue</string>
    <string name="GetFreeChips">Get Free Chips</string>
    <string name="EarnChips">Earn Chips</string>
    <string name="Give5star">Give 5 star</string>
    <string name="ratingAndreview">rating &amp; review</string>
    <string name="LikeOn">Like On</string>
    <string name="None_of_frnd_online"> None of your Friend is Online, Check back later!</string>
    <string name="PostOn">Post On</string>
    <string name="Online">Global</string>
    <string name="Offline">Friends</string>
    <string name="SelectAll">Select All</string>
    <string name="EnterUserName">Enter Username</string>
    <string name="Global">Global</string>
    <string name="Invite">Invite</string>
    <string name="FBFriends">FB Friends</string>
    <string name="Initialbootvalue">Initial Boot Value</string>
    <string name="Share">Share</string>
    <string name="LastWeekWinner">Last Week Winner</string>
    <string name="CurrentWeek">Current Week</string>
    <string name="LastWeek">Last Week</string>
    <string name="Reward">Reward</string>
    <string name="NoDataAvailable">No Data Available</string>
    <string name="blockbuddy">You haven\'t block any Player!</string>
    <string name="nofriends">No Friends</string>
    <string name="Extra">Extra 5x chips..</string>
    <string name="TermandCondition">Term and Conditions</string>
    <string name="Buddiesprofile">Buddies</string>
    <string name="HandsPlayed">"Games Played"</string>
    <string name="HandsPlayed2">"Total Games Played"</string>
    <string name="HandsWon">"Games Won"</string>
    <string name="HandsWon2">"Total Games Won"</string>
    <string name="BiggestHandWon">"Biggest Hand Won"</string>
    <string name="DailyReward_Msg">"Congratulations!! You got "</string>
    <string name="Share_with_your_Friends">Share with your Friends</string>
    <string name="magic_box_bonus">Magic Box Bonus</string>
    <string name="DailyReward_Msg1">" Chips."</string>
    <string name="Day">Day</string>
    <string name="GiftShop">Gift Shop</string>
    <string name="BuyForTable">Buy For Table</string>
    <string name="Themes">Themes</string>
    <string name="ThemePrice">"Theme Price : "</string>
    <string name="BuyNow">Buy Now</string>
    <string name="Like">Like</string>
    <string name="Total">"Total : "</string>
    <string name="ClaimAndShare">Share</string>
    <string name="SendChips">Send Chips</string>
    <string name="Blocked">Blocked</string>
    <string name="profile_pic">Profile Pic!</string>
    <string name="select_your_avatar">Select your Avatar</string>
    <string name="requesttojointable">requested you to join the table.</string>
    <string name="BootValue">Boot Value</string>
    <string name="Join">Join</string>
    <string name="sentyouchips">sent you chips.</string>
    <string name="Send">Send</string>
    <string name="UnblockUser">Unblock</string>
    <string name="Accept">Accept</string>
    <string name="AcceptAndSend">Send</string>
    <string name="requesttosendChips">requested you to send some chips.</string>
    <string name="buddyrequest">sent you Buddy request.</string>
    <string name="Gallery">Gallery</string>
    <string name="AvtarStore">Avatar Store</string>
    <string name="MyAvtar">My Avatar</string>
    <string name="Please_select_your_avatar_from_avatar_store">Please select your avatar from avatar store!</string>
    <string name="Category">Category</string>
    <string name="Name">Name</string>
    <string name="InitialbetValue">Initial Boot Value</string>
    <string name="MinChipsValue">Min. Chips Value</string>
    <string name="ActivePlayers">Active Players</string>
    <string name="NoTablesAvailable">No Tables Available..</string>
    <string name="Unlock">Unlock</string>
    <string name="VIP">" VIP "</string>
    <string name="Room">Room</string>
    <string name="unlock_content">Reach LEVEL 7\n &amp; \nexperience the VIP life.</string>
    <string name="daily_noti"> Your Daily Reward is Ready! Claim your Bonus!</string>
    <string name="hourly_noti"> Hurry up!! Your Hourly Bonus are ready! Tap to get them now!</string>
    <string name="quest_noti"> You have unlocked new Quest. Lets Claim your Bonus!!</string>
    <string name="achivement_noti"> You have unlocked new Achivement. Lets Claim your Bonus!!</string>
    <string name="daily_noti2">Your Reward is ready! Claim your\nReward Chips NOW!</string>
    <string name="Messages">Messages</string>
    <string name="Inbox">Inbox</string>
    <string name="reply">Reply</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Facebook_Login_Requird">Facebook Login</string>
    <string name="Please_login_with_facebook_to_invite_your_friends">Please login with facebook to invite your friends!</string>
    <string name="Login">Login</string>
    <string name="AddBuddy">Add As Buddy</string>
    <string name="SendGift">Send Gift</string>
    <string name="BlockUser">Block User</string>
    <string name="Store">Store</string>
    <string name="AskforChips">Ask for Chips</string>
    <string name="challanegTitle">You Got Challanged!</string>
    <string name="InviteCancelled">Invite Cancelled</string>
    <string name="This_user_playing_on_a_table_with_intial_boot_value_of">"This user playing on a table with intial boot value of "</string>
    <string name="But_he_is_playing_in_private_table_You_cannot_join_table">". But he is playing in private table. You cannot join table."</string>
    <string name="GoToTable">Go To Table</string>
    <string name="You_dont_have_sufficient_chips_to_play_on_this_table">You don\'t have sufficient chips to play on this table</string>
    <string name="BuyChips">Buy Chips</string>
    <string name="Info">Info</string>
    <string name="Level">Level</string>
    <string name="HowToPlay">How To Play</string>
    <string name="newhelptext1">The goal of the game is to collect a hand where most or all of the cards can be\ncombined into sets and sequence and the point value of the remaining unmatched\ncards (Deadwood) is low.
</string>
    <string name="newhelptext2">You can end the play at your turn if, after drawing a card, you can form sufficient\nof your cards into valid combinations: sets and sequence. Any remaining cards from\nyour hand which are not part of a valid combination are called deadwood (Unmatched\ncards). The total value of your deadwood must be 10 points or less.
</string>
    <string name="newhelptext3">Knocking with no unmatched cards(Deadwood) at all is called GIN, and earns special bonus.
</string>
    <string name="newhelptext4">Each player counts the total value of their Deadwood (unmatched cards). If the\nknocker\'s count is lower, the knocker scores the difference between the two counts.
</string>
    <string name="newhelptext5">If the knocker did not go gin, and the counts are equal, or the knocker\'s count is\ngreater than that of the opponent, the knocker has been undercut. In this case\nthe knocker\'s opponent scores the difference between the counts plus a 25 point\nbonus.

</string>
    <string name="newhelptext6">A player who goes gin scores a bonus 25 points, plus the opponent\'s count in\nunmatched cards, if any. A player who goes gin can never be undercut. Even\nif the other player has no unmatched cards at all, the person going gin gets the 25\npoint bonus the other player scores nothing.

</string>
    <string name="newhelptext7">The game continues with further deals until one player\'s cumulative score reaches\n50 points or more point game.

</string>
</resources>