<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleGameRules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scoring"
            android:textColor="@color/title_yellow"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivSeprator1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="-15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivStar1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="top"
                android:layout_marginRight="5dp"
                android:background="@drawable/star" />

            <TextView
                android:id="@+id/tvRule1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newhelptext4"
                android:textColor="@color/yellow"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRuleContainer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivStar2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="top"
                android:layout_marginRight="5dp"
                android:background="@drawable/star" />

            <TextView
                android:id="@+id/tvRule2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newhelptext5"
                android:textColor="@color/yellow"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRuleContainer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivStar3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="top"
                android:layout_marginRight="5dp"
                android:background="@drawable/star" />

            <TextView
                android:id="@+id/tvRule3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newhelptext6"
                android:textColor="@color/yellow"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRuleContainer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivStar4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="top"
                android:layout_marginRight="5dp"
                android:background="@drawable/star" />

            <TextView
                android:id="@+id/tvRule4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newhelptext7"
                android:textColor="@color/yellow"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>