<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/help_bk"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/help_bk1"
        android:layout_width="220dp"
        android:layout_height="212dp"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="100dp"
        android:background="@drawable/howtoplay6" />

    <TextView
        android:id="@+id/activity_help_ctitle"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="10dp"
        android:background="@drawable/lineheader"
        android:gravity="center_horizontal"
        android:shadowColor="@color/black"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/HowToPlay"
        android:textColor="@color/title_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/line32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/game_text11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enjoy"
            android:textColor="@color/title_yellow"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/game_text22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gin Rummy Offline"
            android:textColor="@color/title_yellow"
            android:textSize="19sp" />

        <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/profile_bg"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="Play Now!"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivHandOpenCard2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-5dp"
            android:rotation="75"
            android:src="@drawable/arrow" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/line31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/game_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_how61"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/game_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_how62"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/game_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_how63"
            android:textColor="@color/title_yellow"
            android:textSize="19sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/game_text111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="310dp"
        android:text="(Do checkout Game Rules under Settings\nsection for better understanding of the game.)"
        android:textColor="@color/white"
        android:textSize="14sp" />

</FrameLayout>