<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleGameRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goal of the Game"
                android:textColor="@color/title_yellow"
                android:textSize="18sp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/ivSeprator1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="-30dp"
                android:background="@drawable/line3"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivStar1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="top"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/star" />

                <TextView
                    android:id="@+id/tvRule1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/newhelptext1"
                    android:textColor="@color/yellow"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llSequence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSequenceEx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Ex. Sequence"
                        android:textColor="@color/yellow"
                        android:textSize="14sp" />

                    <FrameLayout
                        android:id="@+id/frmSeqCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/card1"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:background="@drawable/k1" />

                        <ImageView
                            android:id="@+id/card2"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="30dp"
                            android:background="@drawable/k2" />

                        <ImageView
                            android:id="@+id/card3"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="60dp"
                            android:background="@drawable/k3" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSetEx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Ex. Set"
                        android:textColor="@color/yellow"
                        android:textSize="14sp" />

                    <FrameLayout
                        android:id="@+id/frmSetCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/card4"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:background="@drawable/f1" />

                        <ImageView
                            android:id="@+id/card5"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="30dp"
                            android:background="@drawable/c1" />

                        <ImageView
                            android:id="@+id/card6"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:layout_marginLeft="60dp"
                            android:background="@drawable/l1" />
                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivStar2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="top"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/star" />

                <TextView
                    android:id="@+id/tvHead2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Knocking &amp; Gin"
                    android:textColor="@color/yellow"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvRule2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:text="@string/newhelptext2"
                android:textColor="@color/yellow"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvRule3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:text="@string/newhelptext3"
                android:textColor="@color/yellow"
                android:textSize="14sp" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>